--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,32 @@ node_modules
 
 # Optional REPL history
 .node_repl_history
+
+# don't sync Visual Studio files
+.ntvs_analysis.dat
+.ntvs_analysis.dat.tmp
+bin/
+obj/
+*.njsproj
+*.suo
+*.sln
+logs/*.log
+
+*.ldb
+*.dat
+/db
+build/buildtools
+build/win64
+*.nw
+/.vs
+/data
+/discoverysrvc.js
+/streemio.js
+/wssrvc.js
+/config
+
+/prebuild
+/npm
+/node
+/leveldown@1.4.4
+/dtrace-provider@0.6.0
