--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "name": "T Z Pardi",
     "email": "tzpardi@streembit.com"
   },
-  "repository" :
-  { "type" : "git",
-    "url" : "https://github.com/streembit/streembitlib.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/streembit/streembitlib.git"
   },
   "version": "1.0.1",
   "dependencies": {
